deploy/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: github-actions-staging
      serviceAccount: github-actions-staging
      imagePullSecrets:
        - name: quay-pull-secret
      containers:
        - name: portal
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "250m"
