deploy/overlays/dev/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portal
spec:
  host: portal-dev.apps.example.com
